--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "0.18.1",
     "cra-template": "1.0.0",
     "i18n-js": "^3.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-js-pagination": "^3.0.3",
+    "react-notifications": "^1.6.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-spinners": "^0.9.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3"
